--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-HEYGEN_API_KEY="your Heygen API key"
+HEYGEN_API_KEY="NDg2YTdkZTc3NDdhNDhiNmFkNjk1OTUwYzU3NDM0YTQtMTc0NDQyNTIxNA=="
 NEXT_PUBLIC_BASE_API_URL=https://api.heygen.com
